// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import/export library functionality Export Applicants to JSON/CSV/XLSX 1`] = `
Array [
  Array [
    "Last Name",
    "First Name",
    "UTORid",
    "Student Number",
    "email",
    "Phone",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg",
    "1000000000",
    "a@a.com",
    "41666666666",
  ],
  Array [
    "Smith",
    "Anna",
    "smitha",
    "1000000000",
    "a@b.com",
    "41666666666",
  ],
  Array [
    "Smith",
    "Bob",
    "smithb",
    undefined,
    undefined,
    undefined,
  ],
  Array [
    "Smith",
    "史密斯",
    "smith史密斯",
    "1000000000",
    "a@c.com",
    "41666666666",
  ],
]
`;

exports[`Import/export library functionality Export Applicants to JSON/CSV/XLSX 2`] = `
Array [
  Object {
    "email": "a@a.com",
    "first_name": "Gordon",
    "last_name": "Smith",
    "phone": "41666666666",
    "student_number": "1000000000",
    "utorid": "smithg",
  },
  Object {
    "email": "a@b.com",
    "first_name": "Anna",
    "last_name": "Smith",
    "phone": "41666666666",
    "student_number": "1000000000",
    "utorid": "smitha",
  },
  Object {
    "email": undefined,
    "first_name": "Bob",
    "last_name": "Smith",
    "phone": undefined,
    "student_number": undefined,
    "utorid": "smithb",
  },
  Object {
    "email": "a@c.com",
    "first_name": "史密斯",
    "last_name": "Smith",
    "phone": "41666666666",
    "student_number": "1000000000",
    "utorid": "smith史密斯",
  },
]
`;

exports[`Import/export library functionality Export Assignments to JSON/CSV/XLSX 1`] = `
Array [
  Array [
    "Last Name",
    "First Name",
    "UTORid",
    "Email",
    "Position Code",
    "Start Date",
    "End Date",
    "Hours",
    "Contract Template",
    "Contract Override PDF",
    "Offer Status",
    "Recent Activity Date",
    "",
    "Number of Pay Periods",
    "Period 1 Rate",
    "Period 1 Hours",
    "Period 1 Start Date",
    "Period 1 End Date",
    "Period 2 Rate",
    "Period 2 Hours",
    "Period 2 Start Date",
    "Period 2 End Date",
    "Period 3 Rate",
    "Period 3 Hours",
    "Period 3 Start Date",
    "Period 3 End Date",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg",
    "a@a.com",
    "CSC148",
    "2020-02-10",
    "2020-12-31",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    0,
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg1",
    "a@a.com",
    "CSC148",
    "2020-02-10",
    "2020-12-31",
    80,
    null,
    "Special",
    null,
    undefined,
    null,
    0,
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg2",
    "a@a.com",
    "CSC148",
    "2020-02-10",
    "2020-12-10",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    0,
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg3",
    "a@a.com",
    "CSC148",
    "2020-02-10",
    "2020-12-31",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    1,
    50,
    80,
    "2020-02-10",
    "2020-12-31",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg4",
    "a@a.com",
    "CSC148",
    "2020-02-10",
    "2020-12-31",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    1,
    50,
    80,
    "2020-02-10",
    "2020-12-10",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg5",
    "a@a.com",
    "CSC148",
    "2020-12-10",
    "2021-12-10",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    3,
    50,
    30,
    "2020-12-10",
    "2020-12-31",
    50,
    30,
    "2021-01-01",
    "2021-06-30",
    50,
    20,
    "2021-07-01",
    "2021-12-10",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg6",
    "a@a.com",
    "CSC148",
    "2020-12-10",
    "2021-12-10",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    2,
    50,
    30,
    "2020-12-10",
    "2020-12-31",
    50,
    50,
    "2021-01-01",
    "2021-12-01",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg7",
    "a@a.com",
    "CSC148",
    "2020-12-10",
    "2021-12-10",
    80,
    "Regular",
    null,
    null,
    undefined,
    null,
    2,
    50,
    30,
    "2020-12-10",
    "2020-12-31",
    50,
    50,
    "2021-01-01",
    "2021-12-10",
  ],
]
`;

exports[`Import/export library functionality Export Assignments to JSON/CSV/XLSX 2`] = `
Array [
  Object {
    "hours": 80,
    "position_code": "CSC148",
    "utorid": "smithg",
  },
  Object {
    "contract_override_pdf": "Special",
    "hours": 80,
    "position_code": "CSC148",
    "utorid": "smithg1",
  },
  Object {
    "end_date": "2020-12-10T00:00:00.000Z",
    "hours": 80,
    "position_code": "CSC148",
    "start_date": "2020-02-10T00:00:00.000Z",
    "utorid": "smithg2",
  },
  Object {
    "hours": 80,
    "position_code": "CSC148",
    "utorid": "smithg3",
  },
  Object {
    "position_code": "CSC148",
    "utorid": "smithg4",
    "wage_chunks": Array [
      Object {
        "end_date": "2020-12-10T00:00:00.000Z",
        "hours": 80,
        "rate": 50,
        "start_date": "2020-02-10T00:00:00.000Z",
      },
    ],
  },
  Object {
    "position_code": "CSC148",
    "utorid": "smithg5",
    "wage_chunks": Array [
      Object {
        "end_date": "2020-12-31T00:00:00.000Z",
        "hours": 30,
        "rate": 50,
        "start_date": "2020-12-10T00:00:00.000Z",
      },
      Object {
        "end_date": "2021-06-30T00:00:00.000Z",
        "hours": 30,
        "rate": 50,
        "start_date": "2021-01-01T00:00:00.000Z",
      },
      Object {
        "end_date": "2021-12-10T00:00:00.000Z",
        "hours": 20,
        "rate": 50,
        "start_date": "2021-07-01T00:00:00.000Z",
      },
    ],
  },
  Object {
    "position_code": "CSC148",
    "utorid": "smithg6",
    "wage_chunks": Array [
      Object {
        "end_date": "2020-12-31T00:00:00.000Z",
        "hours": 30,
        "rate": 50,
        "start_date": "2020-12-10T00:00:00.000Z",
      },
      Object {
        "end_date": "2021-12-01T00:00:00.000Z",
        "hours": 50,
        "rate": 50,
        "start_date": "2021-01-01T00:00:00.000Z",
      },
    ],
  },
  Object {
    "hours": 80,
    "position_code": "CSC148",
    "utorid": "smithg7",
  },
]
`;

exports[`Import/export library functionality Export Ddahs to JSON/CSV/XLSX 1`] = `
Array [
  Array [
    "Position",
    "Last Name",
    "First Name",
    "email",
    "Assignment Hours",
    "Offer Status",
    "",
    "Hours 1",
    "Duty 1",
    "Hours 2",
    "Duty 2",
  ],
  Array [
    "CSC148",
    "Smith",
    "Gordon",
    "a@a.com",
    80,
    null,
    "",
    40,
    "creating assignments",
    40,
    "marking assignments",
  ],
]
`;

exports[`Import/export library functionality Export Ddahs to JSON/CSV/XLSX 2`] = `
Array [
  Object {
    "applicant": "smithg8",
    "duties": Array [
      Object {
        "description": "creating assignments",
        "hours": 40,
      },
      Object {
        "description": "marking assignments",
        "hours": 40,
      },
    ],
    "position_code": "CSC148",
  },
]
`;

exports[`Import/export library functionality Export Instructors to JSON/CSV/XLSX 1`] = `
Array [
  Array [
    "Last Name",
    "First Name",
    "UTORid",
    "email",
  ],
  Array [
    "Smith",
    "Gordon",
    "smithg",
    "a@a.com",
  ],
  Array [
    "Smith",
    "Anna",
    "smitha",
    "a@b.com",
  ],
  Array [
    "Smith",
    "Bob",
    "smithb",
    undefined,
  ],
  Array [
    "Smith",
    "史密斯",
    "smith史密斯",
    "a@c.com",
  ],
]
`;

exports[`Import/export library functionality Export Instructors to JSON/CSV/XLSX 2`] = `
Array [
  Object {
    "email": "a@a.com",
    "first_name": "Gordon",
    "last_name": "Smith",
    "utorid": "smithg",
  },
  Object {
    "email": "a@b.com",
    "first_name": "Anna",
    "last_name": "Smith",
    "utorid": "smitha",
  },
  Object {
    "email": undefined,
    "first_name": "Bob",
    "last_name": "Smith",
    "utorid": "smithb",
  },
  Object {
    "email": "a@c.com",
    "first_name": "史密斯",
    "last_name": "Smith",
    "utorid": "smith史密斯",
  },
]
`;

exports[`Import/export library functionality Export Instructors to JSON/CSV/XLSX 3`] = `
Array [
  Object {
    "First Name": "Gordon",
    "Last Name": "Smith",
    "UTORid": "smithg",
    "email": "a@a.com",
  },
  Object {
    "First Name": "Anna",
    "Last Name": "Smith",
    "UTORid": "smitha",
    "email": "a@b.com",
  },
  Object {
    "First Name": "Bob",
    "Last Name": "Smith",
    "UTORid": "smithb",
    "email": undefined,
  },
  Object {
    "First Name": "史密斯",
    "Last Name": "Smith",
    "UTORid": "smith史密斯",
    "email": "a@c.com",
  },
]
`;

exports[`Import/export library functionality Export Positions to JSON/CSV/XLSX 1`] = `
Array [
  Array [
    "Position Code",
    "Position Title",
    "Start Date",
    "End Date",
    "Hours Per Assignment",
    "Number of Assignments",
    "Contract Template",
    "Instructors",
    "Duties",
    "Qualifications",
    "Current Enrollment",
    "Current Waitlist",
  ],
  Array [
    "CSC148",
    "Intro to Comp Sci",
    "2020-02-10",
    "2020-12-31",
    10,
    20,
    "Regular",
    "",
    "mark assignments",
    "99% in CSC148",
    400,
    100,
  ],
  Array [
    "CSC165",
    "Intro to Data Struct",
    "2020-02-10",
    "2020-12-31",
    10,
    20,
    "Regular",
    "",
    "mark assignments",
    "99% in CSC165",
    400,
    100,
  ],
  Array [
    "CSC108",
    undefined,
    "2020-02-10",
    "2020-12-31",
    0,
    undefined,
    "Regular",
    "",
    "",
    "",
    undefined,
    undefined,
  ],
  Array [
    "CSC207",
    "Java入门",
    "2020-02-10",
    "2020-12-31",
    10,
    20,
    "Regular",
    "",
    "作业评分",
    "99分 in CSC207",
    400,
    100,
  ],
]
`;

exports[`Import/export library functionality Export Positions to JSON/CSV/XLSX 2`] = `
Array [
  Object {
    "ad_close_date": null,
    "ad_hours_per_assignment": null,
    "ad_num_assignments": null,
    "ad_open_date": null,
    "contract_template": "Regular",
    "current_enrollment": 400,
    "current_waitlisted": 100,
    "desired_num_assignments": 20,
    "duties": "mark assignments",
    "end_date": "2020-12-31T00:00:00.000Z",
    "hours_per_assignment": 10,
    "instructors": Array [],
    "position_code": "CSC148",
    "position_title": "Intro to Comp Sci",
    "qualifications": "99% in CSC148",
    "start_date": "2020-02-10T00:00:00.000Z",
  },
  Object {
    "ad_close_date": null,
    "ad_hours_per_assignment": null,
    "ad_num_assignments": null,
    "ad_open_date": null,
    "contract_template": "Regular",
    "current_enrollment": 400,
    "current_waitlisted": 100,
    "desired_num_assignments": 20,
    "duties": "mark assignments",
    "end_date": "2020-12-31T00:00:00.000Z",
    "hours_per_assignment": 10,
    "instructors": Array [],
    "position_code": "CSC165",
    "position_title": "Intro to Data Struct",
    "qualifications": "99% in CSC165",
    "start_date": "2020-02-10T00:00:00.000Z",
  },
  Object {
    "ad_close_date": undefined,
    "ad_hours_per_assignment": undefined,
    "ad_num_assignments": undefined,
    "ad_open_date": undefined,
    "contract_template": "Regular",
    "current_enrollment": undefined,
    "current_waitlisted": undefined,
    "desired_num_assignments": undefined,
    "duties": undefined,
    "end_date": "2020-12-31T00:00:00.000Z",
    "hours_per_assignment": 0,
    "instructors": Array [],
    "position_code": "CSC108",
    "position_title": undefined,
    "qualifications": undefined,
    "start_date": "2020-02-10T00:00:00.000Z",
  },
  Object {
    "ad_close_date": null,
    "ad_hours_per_assignment": null,
    "ad_num_assignments": null,
    "ad_open_date": null,
    "contract_template": "Regular",
    "current_enrollment": 400,
    "current_waitlisted": 100,
    "desired_num_assignments": 20,
    "duties": "作业评分",
    "end_date": "2020-12-31T00:00:00.000Z",
    "hours_per_assignment": 10,
    "instructors": Array [],
    "position_code": "CSC207",
    "position_title": "Java入门",
    "qualifications": "99分 in CSC207",
    "start_date": "2020-02-10T00:00:00.000Z",
  },
]
`;
